src/test/compile-fail/arg_count_mismatch.mmtn
// { "compile_status": "fail" }

fn foo(a: u64, b: u64, c: u64) -> u64 {
    a
}

fn main() -> u64 {
    foo(0, 1)
}
